# LOP-VND

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  lop  mourir.cpp  outest  runner.py  test.py
assets/best_known/: best_known.txt  best_known_150.txt
assets/timings/: vnd_time.csv
results/ils/: res_ils.csv  res_ils_init.csv  res_ils_moves.csv  res_ils_perturbation_study.csv
results/iter/: res_iter.csv
results/memetic/: res_memetic.csv  res_memetic_localsearch.csv  res_memetic_mut_rate.csv  res_memetic_mutationRate.csv  res_memetic_popsize.csv  res_memetic_popsize_2.csv
results/vnd/: res_vnd.csv
src/: main.cpp
src/Stats/: iterarive.R  iterative_statistikss.R  setup.R  vnd.R  vnd_statistikss.R
src/Stats/ils/: ils_parameter.R
src/Stats/implementation_1/iterative/: iterarive.R  iterative_statistikss.R
src/Stats/implementation_1/vnd/: vnd.R
src/Stats/implementation_2/: statistics.R
src/Stats/implementation_2/ils/: ils.R  (+3 more)
src/Stats/iterative/: iterarive.R
src/Stats/memetic/: memetic.R
src/Stats/outputs/: deviation_ils_memetic.csv  mean_deviation_ils_memetic.csv  wilcoxon_ils_memetic.csv
src/Stats/vnd/: vnd.R  vnd_statistikss.R  vnd_time.R
src/algorithmType/: algorithm_type.h
src/algorithmType/genetic/: memetic.cpp  memetic.h
src/algorithmType/iterative/: iterative.cpp  iterative.h
src/algorithmType/iterative_local_search/: iterative_local_search.cpp  iterative_local_search.h
src/algorithmType/vnd/: vnd.cpp  vnd.h
src/algorithms/: algorithms.h
src/algorithms/config/: configuration.cpp  configuration.h
src/algorithms/initialisation/: Initialisation.cpp  cw_heuristic.cpp  random_permutation.cpp
src/algorithms/operations/: exchange.cpp  insert.cpp  transpose.cpp
src/algorithms/pivots/: best_improvement.cpp  first_improvement.cpp
src/algorithms/solution/: solution.cpp  solution.h
src/skeleton/: skeleton.h
src/skeleton/config/: configuration.cpp  configuration.h
src/skeleton/instance/: instance.cpp  instance.h
src/skeleton/output/: output.cpp  output.h
src/skeleton/utilities/: utilities.cpp  utilities.h
test/: mourir.cpp  outest.cpp  test  test.cpp  test2  test2.cpp
(+37 files in other folders)
